# macos-tahoe-liquid-kde

./: .gitignore  CLAUDE.md  README.md  features.json  install.sh  rebuild-blur.sh  uninstall.sh
src/mirrors/: cursors.json  cursors.txt  fonts.json  fonts.txt  icons.json  icons.txt  wallpapers.json  wallpapers.txt
src/offline/: mac-tahoe-liquid-kde-theme.service  mactahoe-liquid-kde-theme.service  theme-switch.sh
src/offline/aurorae/: metadata.desktop  metadata.json
src/offline/color-schemes/: MacTahoeLiquidKdeDark.colors  MacTahoeLiquidKdeLight.colors
src/offline/gtk/MacTahoeLiquidKde-Dark/: index.theme
src/offline/gtk/MacTahoeLiquidKde-Dark/cinnamon/: cinnamon.css
src/offline/gtk/MacTahoeLiquidKde-Dark/gnome-shell/: gnome-shell.css
src/offline/gtk/MacTahoeLiquidKde-Dark/gtk-3.0/: gtk-dark.css  gtk.css
src/offline/gtk/MacTahoeLiquidKde-Dark/gtk-4.0/: gtk-Light.css  gtk-dark.css  gtk.css
src/offline/gtk/MacTahoeLiquidKde-Dark/metacity-1/: metacity-theme-1.xml  metacity-theme-3.xml
src/offline/gtk/MacTahoeLiquidKde-Dark/plank/: dock.theme
src/offline/gtk/MacTahoeLiquidKde-Light/: index.theme
src/offline/gtk/MacTahoeLiquidKde-Light/cinnamon/: cinnamon.css
src/offline/gtk/MacTahoeLiquidKde-Light/gnome-shell/: gnome-shell.css
src/offline/gtk/MacTahoeLiquidKde-Light/gtk-3.0/: gtk-dark.css  gtk.css
src/offline/gtk/MacTahoeLiquidKde-Light/gtk-4.0/: gtk-Dark.css  gtk-Light.css  gtk-dark.css  gtk.css
src/offline/gtk/MacTahoeLiquidKde-Light/metacity-1/: metacity-theme-1.xml
src/offline/gtk/MacTahoeLiquidKde-Light/plank/: dock.theme
src/offline/kvantum/MacTahoeLiquidKde/: MacTahoeLiquidKde.kvconfig  MacTahoeLiquidKdeDark.kvconfig
src/offline/kvantum/mac-tahoe-liquid-kde/: mac-tahoe-liquid-kde.kvconfig  mac-tahoe-liquid-kdeDark.kvconfig
src/offline/kwin-effects/acrylic-glass/: CMakeLists.txt
src/offline/kwin-effects/acrylic-glass/src/: CMakeLists.txt  blur.cpp  blur.h  blur.kcfg  metadata.json  settings.h
src/offline/kwin-effects/acrylic-glass/src/kcm/: CMakeLists.txt  about.html  blur_config.cpp  blur_config.h  blur_config.ui
src/offline/kwin-effects/acrylic-glass/src/shaders/: downsample.frag  downsample_core.frag  glass.glsl  onscreen_rounded.glsl  onscreen_rounded_core.glsl  texture.frag  texture_core.frag  upsample.frag  upsample_core.frag
src/offline/kwin-effects/glass-kde-replica/: CMakeLists.txt
src/offline/kwin-effects/glass-kde-replica/src/: blur.cpp  blur.kcfg  liquidglass.qrc  metadata.json  settings.cpp
src/offline/kwin-effects/glass-kde-replica/src/kcm/: about.html  blur_config.cpp  blur_config.h  blur_config.qrc  blur_config.ui
src/offline/kwin-effects/glass-kde-replica/src/shaders/: glass.glsl  onscreen_rounded.glsl  onscreen_rounded_core.glsl
src/offline/layouts/: default.js  mac-tahoe.js  mactahoe.js
src/offline/plasma-applets/globalmenu/: CMakeLists.txt  appmenuapplet.cpp  appmenumodel.cpp  appmenumodel.h  metadata.json
src/offline/plasma-applets/globalmenu/qml/: MenuDelegate.qml  config.qml  configGeneral.qml  main.qml
src/offline/plasma-theme/MacTahoeLiquidKde-Dark/: metadata.desktop  metadata.json  plasmarc
src/offline/plasma-theme/MacTahoeLiquidKde-Dark/dialogs/: background.svgz
src/offline/plasma-theme/MacTahoeLiquidKde-Dark/widgets/: background.svgz  panel-background.svgz  tooltip.svgz  translucentbackground.svgz
src/offline/plasma-theme/MacTahoeLiquidKde-Light/: metadata.desktop  metadata.json
src/offline/plasma-theme/MacTahoeLiquidKde-Light/dialogs/: background.svgz
src/offline/plasma-theme/MacTahoeLiquidKde-Light/widgets/: background.svgz  panel-background.svgz  tooltip.svgz  translucentbackground.svgz
src/offline/plasma-themes/mactahoe-topbar/: metadata.json
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.appmenu/: metadata.json
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.appmenu/contents/config/: main.xml
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.globalmenu/: CMakeLists.txt  appmenuapplet.h  appmenumodel.cpp  metadata.json
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.globalmenu/contents/config/: config.qml
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.globalmenu/contents/ui/: ListDelegate.qml
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.globalmenu/libdbusmenuqt/: CMakeLists.txt
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.globalmenu/qml/: main.qml
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.launcher/: metadata.json
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.menu/: metadata.json
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.trash/: metadata.json
src/offline/plasmoids/org.kde.mac-tahoe-liquid-kde.trashcan/: metadata.json
src/offline/plasmoids/org.kde.mac.tahoe.globalmenu/: appmenuapplet.cpp
src/offline/plasmoids/org.kde.mactahoe-liquid-kde.trash/: metadata.json
src/plasmoids/trash/: metadata.json
src/plasmoids/trash/contents/config/: config.qml  main.xml
src/plasmoids/trash/contents/ui/: configGeneral.qml  main.qml
src/scripts/: rebuild-kwin-effects.sh
src/steps/: functions.sh  step-cursors.sh  step-fonts.sh  step-icons.sh  step-wallpapers.sh  utils.sh
src/steps/acrylic-glass/: step.sh
src/steps/apply/: step.sh
src/steps/apps/: step.sh
src/steps/color-schemes/: step.sh
src/steps/cursors/: step.sh
src/steps/fonts/: step.sh
src/steps/globalmenu/: step.sh
src/steps/gtk/: step.sh
src/steps/icons/: step.sh
src/steps/kvantum/: step.sh
src/steps/layout/: step.sh
src/steps/plasma-theme/: step.sh
src/steps/plasmoids/: step.sh
src/steps/sddm/: step.sh
src/steps/sounds/: step.sh
src/steps/theme-switch/: step.sh
src/steps/wallpapers/: step.sh
src/steps/window-decorations/: step.sh
(+29 files in other folders)
